Improved testing and housekeeping